WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62075
GCC not inlining some functions that it really should be
https://bugs.webkit.org/show_bug.cgi?id=62075
Summary
GCC not inlining some functions that it really should be
Oliver Hunt
Reported
2011-06-03 17:26:31 PDT
GCC not inlining some functions that it really should be
Attachments
Patch
(4.16 KB, patch)
2011-06-03 17:27 PDT
,
Oliver Hunt
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-06-03 17:27:46 PDT
Created
attachment 95996
[details]
Patch
Gavin Barraclough
Comment 2
2011-06-03 17:32:44 PDT
Comment on
attachment 95996
[details]
Patch Bad GCC :-(
Oliver Hunt
Comment 3
2011-06-03 17:43:59 PDT
Committed
r88083
: <
http://trac.webkit.org/changeset/88083
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug